--- a/index.html
+++ b/index.html
@@ -69,17 +69,19 @@
       <!--  HERO  -->
       <section class="hero__section section">
         <div class="hero__container container">
-          <h1 class="hero__header">Complex preparation for English UPE</h1>
-          <p class="hero__text-top">It won’t be easy.</p>
-          <p class="hero__text-bottom">But you are guaranteed to get&nbsp;</p>
-          <span class="hero__text-bottom hero__text-bottom--accent accent"
-            >+25 points</span
-          >
-          <button class="hero__btn btn btn--filled" type="button">
-            i want a free lesson
-          </button>
+            <div class="hero__wraper">
+            <h1 class="hero__header">Complex preparation for English UPE</h1>
+            <p class="hero__text-top">It won’t be easy.</p>
+            <p class="hero__text-bottom">But you are guaranteed to get&nbsp;</p>
+            <span class="hero__text-bottom hero__text-bottom--accent accent"
+              >+25 points</span
+            >
+            <button class="hero__btn btn btn--filled" type="button">
+              i want a free lesson
+            </button>
+          </div>
+          <div class="hero__img"></div>
         </div>
-        <div class="hero__img"></div>
       </section>
       <!--  END HERO  -->
 
