--- a/index.html
+++ b/index.html
@@ -69,18 +69,25 @@
       <!--  HERO  -->
       <section class="hero__section section">
         <div class="hero__container container">
-            <div class="hero__wraper">
+          <div class="hero__wrapper">
             <h1 class="hero__header">Complex preparation for English UPE</h1>
             <p class="hero__text-top">It won’t be easy.</p>
-            <p class="hero__text-bottom">But you are guaranteed to get&nbsp;</p>
-            <span class="hero__text-bottom hero__text-bottom--accent accent"
-              >+25 points</span
-            >
+            <p class="hero__text-bottom">But you are guaranteed to get</p>
+            <p class="hero__text-bottom hero__text-bottom--accent accent">
+              +25 points
+            </p>
             <button class="hero__btn btn btn--filled" type="button">
               i want a free lesson
             </button>
           </div>
-          <div class="hero__img"></div>
+          <div class="hero__img-wrapper">
+            <img
+                class="hero__img"
+                src="../images/hero-tablet.png"
+                srcset="../images/hero-tablet@2x.png 2x"
+                alt="grupa ludzi przy biurku"
+              />
+          </div>
         </div>
       </section>
       <!--  END HERO  -->
